--- a/index.html
+++ b/index.html
@@ -4,8 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Webpage</title>
+    <style>
+     .applet{
+      text-align: center;
+      font-size: 5rem;
+ }
+    </style>
 </head>
 <body>
-    <n>Hello Lord!</n>
+    <div>
+    <h1 class="applet"><a href="applet.html">GO TO APPLETS </a></h1>
+
+</div>
 </body>
 </html>
