--- a/applet-1.html
+++ b/applet-1.html
@@ -8,7 +8,8 @@
     <title>Applet 1 - Basic Events</title>
     <style>
         .design {
-            border: 2px solid #ccc;
+            border: 2px solid #111010;
+            margin: 40px;
             padding: 20px;
             background-color: white;
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
