Added some changes on the Applet 3 side

--- a/applet.html
+++ b/applet.html
@@ -83,7 +83,7 @@
             <img src="https://t4.ftcdn.net/jpg/05/55/71/83/240_F_555718315_XAi4cgO4s2uBRshlJZ8wXjAWkptX8023.jpg" class="card-img-top" alt="applet-3">
             <div class="card-body">
               <h5 class="card-title">APPLET 3 - EVENT LOGGER</h5>
-              <p class="card-text">This application contains the basic web map.</p>
+              <p class="card-text">This shows the logs with the  date and total number of logs.</p>
               <a href="applet-3.html" class="btn btn-primary">Go to Applet 3</a>
             </div>
           </div>
