--- a/applet-2.html
+++ b/applet-2.html
@@ -29,7 +29,7 @@
 
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
-      <a class="navbar-brand" href="index.html">HOME</a>
+      <a class="navbar-brand" href="applet.html">HOME</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -98,7 +98,6 @@ class LeafletMap {
 }
 
 const myMap = new LeafletMap('map', [8.360004, 124.868419], 18);
-
 
 myMap.loadMarkersFromJson('applet-2.json');
 
