Add main content for Event Button Logger with buttons and data display

--- a/applet-3.html
+++ b/applet-3.html
@@ -40,4 +40,24 @@
     </div>
 </nav>
 
+<body>
+
+    <h1 class="title">Event Button Logger</h1>  
+    <div class="vertical-container">
+        <div class="applet-3">
+            <h3 id="logCount">Total Logs: 0</h3>
+            <br>
+            <button class="btn btn-primary" id="logButton">Click Me</button>
+            <button class="btn btn-secondary" id="clearButton">Clear</button>
+        </div>
+
+        <div class="collect">
+            <h2>Collected Data:</h2>
+            <div id="cardContainer" style="width:20rem"></div>
+        </div>
+    </div>
+    
+
+<script src="applet-3.js"></script>
+</body>
 </html>
