--- a/applet-3.html
+++ b/applet-3.html
@@ -6,7 +6,41 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <title>Applet 3 - Event Button Logger</title>
-    
+    <style>
+         .title {
+            font-size: 3rem;
+            display: flex;
+            justify-content: center;
+            margin-top: 2rem; 
+        }
+        .applet-flex-container {
+            margin-left: 5rem;
+            display: flex;
+            justify-content: center;
+            flex-wrap: wrap;
+            gap: 2rem; 
+        }
+        .vertical-container {
+            display: flex; 
+            justify-content: center;
+            align-items: flex-start; 
+            margin-top: 2rem; 
+        }
+        .applet-3, .collect {
+            border: 2px solid #111010;
+            margin: 40px;
+            padding: 20px;
+            background-color: white;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+            text-align: center;
+            width: 100%;
+            max-width: 400px; 
+        }
+        .btn {
+            margin: 0.5rem; 
+        }
+
+    </style>
     
 </head>
 
