--- a/Applet 1/applet-1.html
+++ b/Applet 1/applet-1.html
@@ -21,7 +21,7 @@
 
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
-      <a class="navbar-brand" href="applet.html">Home</a>
+      <a class="navbar-brand" href="/index.html">HOME</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -29,12 +29,12 @@
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              APPLET
+              APPLETS
             </a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="applet-1.html">APPLET 1</a></li>
-              <li><a class="dropdown-item" href="applet-2.html">APPLET 2</a></li>
-              <li><a class="dropdown-item" href="applet-3.html">APPLET 3</a></li>
+              <li><a class="dropdown-item" href="/Applet 1/applet-1.html">APPLET 1</a></li>
+              <li><a class="dropdown-item" href="/Applet 2/applet-2.html">APPLET 2</a></li>
+              <li><a class="dropdown-item" href="/Applet 3/applet-3.html">APPLET 3</a></li>
             </ul>
           </li>
           <li class="nav-item">
