--- a/Applet 2/applet-2.html
+++ b/Applet 2/applet-2.html
@@ -43,6 +43,7 @@
               <li><a class="dropdown-item" href="/Applet 1/applet-1.html">APPLET 1</a></li>
               <li><a class="dropdown-item" href="/Applet 2/applet-2.html">APPLET 2</a></li>
               <li><a class="dropdown-item" href="/Applet 3/applet-3.html">APPLET 3</a></li>
+              <li><a class="dropdown-item" href="/Applet 4/applet-4.html">APPLET 4</a></li>
             </ul>
           </li>
           <li class="nav-item">
