--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
               <li><a class="dropdown-item" href="Applet 1/applet-1.html">APPLET 1</a></li>
               <li><a class="dropdown-item" href="Applet 2/applet-2.html">APPLET 2</a></li>
               <li><a class="dropdown-item" href="Applet 3/applet-3.html">APPLET 3</a></li>
+              <li><a class="dropdown-item" href="/Applet 4/applet-4.html">APPLET 4</a></li>
+              
             </ul>
           </li>
           <li class="nav-item">
@@ -85,6 +87,14 @@
               <h5 class="card-title">APPLET 3 - EVENT LOGGER</h5>
               <p class="card-text">This shows the logs with the  date and total number of logs.</p>
               <a href="Applet 3/applet-3.html" class="btn btn-primary">Go to Applet 3</a>
+            </div>
+          </div>
+          <div class="card" style="width: 18rem;">
+            <img src="https://p4.wallpaperbetter.com/wallpaper/396/126/343/landscape-village-nature-hills-wallpaper-preview.jpg" class="card-img-top" alt="applet-4"height = 191px>
+            <div class="card-body">
+              <h5 class="card-title">APPLET 4 - DYNAMIC ELEMENTS</h5>
+              <p class="card-text">Dynamically displays a list of students with real-time search functionality.</p>
+              <a href="Applet 4/applet-4.html" class="btn btn-primary">Go to Applet 4</a>
             </div>
           </div>
 </body>
