--- a/index.html
+++ b/index.html
@@ -90,5 +90,7 @@
    
     <div class="applet-flex-container" id="appletContainer"></div>
 
+    <script src="index.json"></script>
+   
 </body>
 </html>
