Linked index.js to handle the logic for rendering applet cards and search functionality.

--- a/index.html
+++ b/index.html
@@ -91,6 +91,6 @@
     <div class="applet-flex-container" id="appletContainer"></div>
 
     <script src="index.json"></script>
-   
+    <script src="index.js"></script>
 </body>
 </html>
