Added some changes on the index.html

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 </ul>
                 <form class="d-flex" role="search">
                     <input class="form-control me-2" type="search" id="appletSearchBar" placeholder="Search Applets" aria-label="Search">
-                    <button class="btn btn-outline-light" type="button" id="searchButton">Search</button>
+                    <button class="btn btn-success" type="button" id="searchButton">Search</button>
                 </form>
             </div>
         </div>
