Added some changes on syle

--- a/Applet 4/applet-4.html
+++ b/Applet 4/applet-4.html
@@ -13,12 +13,12 @@
             margin-left: 2rem;
         }
             .input-search {
-            margin: 2rem auto; /* Center the search input with top/bottom margin */
+            margin: 2rem auto; 
             width: 50%;;
         }
         #studentList, #studentSearchList {
-            margin-top: 1rem; /* Space above the student list */
-            text-align: center; /* Centers the buttons in the list */
+            margin-top: 1rem; 
+            text-align: center; 
         }
     </style>
     
