--- a/index.html
+++ b/index.html
@@ -49,6 +49,11 @@
         .card:hover {
             transform: scale(1.05);
         }
+        .image {
+        height: 200px; 
+        width: auto;   
+        object-fit: cover; 
+}
     </style>
 </head>
 
@@ -79,7 +84,7 @@
                 </ul>
                 <form class="d-flex" role="search">
                     <input class="form-control me-2" type="search" id="appletSearchBar" placeholder="Search Applets" aria-label="Search">
-                    <button class="btn btn-success" type="button" id="searchButton">Search</button>
+                    <button class="btn btn-outline-success" type="button" id="searchButton">Search</button>
                 </form>
             </div>
         </div>
