Added some changes to view it on pages directly without error

--- a/Applet 1/index.html
+++ b/Applet 1/index.html
@@ -32,10 +32,10 @@
               APPLETS
             </a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="/Applet 1/applet-1.html">APPLET 1</a></li>
-              <li><a class="dropdown-item" href="/Applet 2/applet-2.html">APPLET 2</a></li>
-              <li><a class="dropdown-item" href="/Applet 3/applet-3.html">APPLET 3</a></li>
-              <li><a class="dropdown-item" href="/Applet 4/applet-4.html">APPLET 4</a></li>
+              <li><a class="dropdown-item" href="/Applet 1/index.html">APPLET 1</a></li>
+              <li><a class="dropdown-item" href="/Applet 2/index.html">APPLET 2</a></li>
+              <li><a class="dropdown-item" href="/Applet 3/index.html">APPLET 3</a></li>
+              <li><a class="dropdown-item" href="/Applet 4/index.html">APPLET 4</a></li>
             </ul>
           </li>
           <li class="nav-item">
