--- a/index.html
+++ b/index.html
@@ -72,10 +72,10 @@
                             APPLETS
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="Applet 1/applet-1.html">Applet 1</a></li>
-                            <li><a class="dropdown-item" href="Applet 2/applet-2.html">Applet 2</a></li>
-                            <li><a class="dropdown-item" href="Applet 3/applet-3.html">Applet 3</a></li>
-                            <li><a class="dropdown-item" href="Applet 4/applet-4.html">Applet 4</a></li>
+                            <li><a class="dropdown-item" href="/Applet 1/index.html">Applet 1</a></li>
+                            <li><a class="dropdown-item" href="/Applet 2/index.html">Applet 2</a></li>
+                            <li><a class="dropdown-item" href="/Applet 3/index.html">Applet 3</a></li>
+                            <li><a class="dropdown-item" href="/Applet 4/index.html">Applet 4</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
