Added some changes on folder name

--- a/Applet_3/index.html
+++ b/Applet_3/index.html
@@ -57,10 +57,10 @@
               APPLETS
             </a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="/Applet 1/index.html">APPLET 1</a></li>
-              <li><a class="dropdown-item" href="/Applet 2/index.html">APPLET 2</a></li>
-              <li><a class="dropdown-item" href="/Applet 3/index.html">APPLET 3</a></li>
-              <li><a class="dropdown-item" href="/Applet 4/index.html">APPLET 4</a></li>
+              <li><a class="dropdown-item" href="/Applet_1/index.html">APPLET 1</a></li>
+              <li><a class="dropdown-item" href="/Applet_2/index.html">APPLET 2</a></li>
+              <li><a class="dropdown-item" href="/Applet_3/index.html">APPLET 3</a></li>
+              <li><a class="dropdown-item" href="/Applet_4/index.html">APPLET 4</a></li>
               
             </ul>
           </li>
