--- a/index.html
+++ b/index.html
@@ -72,10 +72,10 @@
                             APPLETS
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="/Applet 1/index.html">Applet 1</a></li>
-                            <li><a class="dropdown-item" href="/Applet 2/index.html">Applet 2</a></li>
-                            <li><a class="dropdown-item" href="/Applet 3/index.html">Applet 3</a></li>
-                            <li><a class="dropdown-item" href="/Applet 4/index.html">Applet 4</a></li>
+                            <li><a class="dropdown-item" href="/Applet_1/index.html">Applet 1</a></li>
+                            <li><a class="dropdown-item" href="/Applet_2/index.html">Applet 2</a></li>
+                            <li><a class="dropdown-item" href="/Applet_3/index.html">Applet 3</a></li>
+                            <li><a class="dropdown-item" href="/Applet_4/index.html">Applet 4</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
