--- a/Applet_3/index.html
+++ b/Applet_3/index.html
@@ -59,7 +59,7 @@
             <ul class="dropdown-menu">
               <li><a class="dropdown-item" href="/Applet_1/index.html">APPLET 1</a></li>
               <li><a class="dropdown-item" href="/Applet_2/index.html">APPLET 2</a></li>
-              <li><a class="dropdown-item" href="">APPLET 3</a></li>
+              <li><a class="dropdown-item" href="/Applet_3/index.html">APPLET 3</a></li>
               <li><a class="dropdown-item" href="/Applet_4/index.html">APPLET 4</a></li>
               
             </ul>
