--- a/index1.html
+++ b/index1.html
@@ -32,10 +32,10 @@
               APPLETS
             </a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="/Applet_1/index.html">APPLET 1</a></li>
-              <li><a class="dropdown-item" href="/Applet_2/index.html">APPLET 2</a></li>
-              <li><a class="dropdown-item" href="/Applet_3/index.html">APPLET 3</a></li>
-              <li><a class="dropdown-item" href="/Applet_4/index.html">APPLET 4</a></li>
+              <li><a class="dropdown-item" href="index1.html">APPLET 1</a></li>
+              <li><a class="dropdown-item" href="index2.html">APPLET 2</a></li>
+              <li><a class="dropdown-item" href="index3.html">APPLET 3</a></li>
+              <li><a class="dropdown-item" href="index4.html">APPLET 4</a></li>
             </ul>
           </li>
           <li class="nav-item">
