--- a/index1.html
+++ b/index1.html
@@ -35,7 +35,7 @@
               <li><a class="dropdown-item" href="index1.html">APPLET 1</a></li>
               <li><a class="dropdown-item" href="index2.html">APPLET 2</a></li>
               <li><a class="dropdown-item" href="index3.html">APPLET 3</a></li>
-              <li><a class="dropdown-item" href="index4.html">APPLET 4</a></li>
+              <li><a class="dropdown-item" href="">APPLET 4</a></li>
             </ul>
           </li>
           <li class="nav-item">
