--- a/index5.html
+++ b/index5.html
@@ -38,5 +38,33 @@
         </div>
     </div>
 </nav>
+
+<div class="container">
+    <!-- Button trigger modal -->
+    <button type="button" class="btn btn-primary mt-4" data-bs-toggle="modal" data-bs-target="#infoModal">Open Modal Input</button>
+
+    <div class="row">
+        <div class="col">
+            <h1 class="text-center">Weather App</h1>
+            <div class="card text-white">
+                <div class="input-search">
+                    <input type="password" id="apiKeyInput" placeholder="Enter API Key" class="form-control mb-2" />
+                    <input type="text" id="cityInput" placeholder="Enter city name" class="form-control mb-2" />
+                    <button id="getWeatherBtn" class="btn btn-success mb-2">Get Weather</button>
+                    <button id="getLocationBtn" class="btn btn-secondary mb-2">Use My Location</button>
+                </div>
+                <div id="weatherCard" style="display: none; padding: 1rem; background-color: rgb(63, 63, 63);">
+                    <img id="weatherIcon" src="" alt="Weather Icon">
+                    <h2 id="cityName"></h2>
+                    <p id="temperature"></p>
+                    <p id="description"></p>
+                    <p id="humidity"></p>
+                    <p id="windSpeed"></p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
 </body>
 </html>
