added cahnges on applet 1, 2, 3, and 4

--- a/index4.html
+++ b/index4.html
@@ -41,6 +41,7 @@
             <li><a class="dropdown-item" href="index2.html">APPLET 2</a></li>
             <li><a class="dropdown-item" href="index3.html">APPLET 3</a></li>
             <li><a class="dropdown-item" href="index4.html">APPLET 4</a></li>
+            <li><a class="dropdown-item" href="index5.html">APPLET 5</a></li>
           </ul>
         </li>
         <li class="nav-item">
