--- a/index1.html
+++ b/index1.html
@@ -32,10 +32,11 @@
               APPLETS
             </a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="index1.html">APPLET 1</a></li>
-              <li><a class="dropdown-item" href="index2.html">APPLET 2</a></li>
-              <li><a class="dropdown-item" href="index3.html">APPLET 3</a></li>
-              <li><a class="dropdown-item" href="index4.html">APPLET 4</a></li>
+            <li><a class="dropdown-item" href="index1.html">APPLET 1</a></li>
+            <li><a class="dropdown-item" href="index2.html">APPLET 2</a></li>
+            <li><a class="dropdown-item" href="index3.html">APPLET 3</a></li>
+            <li><a class="dropdown-item" href="index4.html">APPLET 4</a></li>
+            <li><a class="dropdown-item" href="index5.html">Applet 5</a></li>
             </ul>
           </li>
           <li class="nav-item">
