--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@
                             <li><a class="dropdown-item" href="index2.html">APPLET 2</a></li>
                             <li><a class="dropdown-item" href="index3.html">APPLET 3</a></li>
                             <li><a class="dropdown-item" href="index4.html">APPLET 4</a></li>
-                            <li><a class="dropdown-item" href="index5.html">Applet 5</a></li>
+                            <li><a class="dropdown-item" href="index5.html">APPLET 5</a></li>
+                            <li><a class="dropdown-item" href="index6.html">APPLET 6</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
