added a dropdown menu for applet 6

--- a/index3.html
+++ b/index3.html
@@ -62,7 +62,7 @@
               <li><a class="dropdown-item" href="index3.html">APPLET 3</a></li>
               <li><a class="dropdown-item" href="index4.html">APPLET 4</a></li>
               <li><a class="dropdown-item" href="index5.html">APPLET 5</a></li>
-              
+              <li><a class="dropdown-item" href="index6.html">APPLET 6</a></li>
             </ul>
           </li>
           <li class="nav-item">
